# api-sample

./: README.md
CSharp/BTSEApiSample/: .gitignore  BTSEApiSample.sln
nodejs/: Dockerfile  eslint.config.js  package-lock.json  package.json
postman/: api.postman_collection.json
python/: Dockerfile  pyproject.toml
python/api/: futures_amend_order.py  futures_bind_tp_sl.py  futures_cancel_all_after.py  futures_cancel_order.py  futures_change_position_mode.py  futures_change_settlement_currency.py  futures_charting_data.py  futures_close_position.py  futures_create_new_algo_order.py  futures_get_funding_history.py  futures_get_leverage.py  futures_get_market_risk_limit.py  futures_get_open_orders.py  futures_get_orderbook.py  futures_get_orderbook_L2.py  futures_get_risk_limit.py  futures_get_trades.py  futures_place_limit_order.py  futures_place_market_order.py  futures_place_oco_order.py  futures_place_reduce_only_order.py  futures_place_trailing_stop_order.py  futures_query_account_fees.py  futures_query_margin_setting.py  futures_query_market_price.py  futures_query_order.py  futures_query_position_mode.py  futures_query_trades_fills.py  futures_query_unified_wallet_margin.py  futures_query_wallet_margin.py  futures_set_leverage.py  futures_set_risk_limits.py  futures_subaccount_wallet_transfer.py  futures_transfer_funds_between_futures_wallet.py  futures_ws_get_all_position.py  futures_ws_get_orderbook_depth.py  futures_ws_get_orderbook_group.py  futures_ws_get_oss_delta.py  futures_ws_get_oss_snapshot.py  futures_ws_get_positions.py  (+24 more)
(+263 files in other folders)
