[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Yuan-Chen Ho <yuan-chen.ho@nogle.com>"]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.34.2"
python-dotenv = "^1.2.2"
websocket-client = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py313']
include = '\.pyi?$'
